Fix pop-up styling so it's always visible for small viewport sizes

--- a/index.css
+++ b/index.css
@@ -124,7 +124,7 @@ button#generate {
 
 
 .pop-up {
-    position: absolute;
+    position: fixed;
     background: #10B981;
     width: 100%;
     height: 50px;
